package fit.iuh.filesystem;

public interface FileComponent {
  void show(String indent);
}
