package fit.iuh.ui;

public interface UIComponent {
  void render(String indent);
}
